[gd_scene load_steps=4 format=3 uid="uid://ebiwkqon87f3"]

[ext_resource type="Script" path="res://components/scripts/basic_enemy.gd" id="1_dwcur"]
[ext_resource type="Texture2D" uid="uid://cc6fresw3yyk8" path="res://icon.svg" id="2_egw5b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfiaw"]
size = Vector2(175, 162)

[node name="BasicEnemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_dwcur")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(49, 54)
scale = Vector2(1.368, 1.266)
texture = ExtResource("2_egw5b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(48.5, 54)
shape = SubResource("RectangleShape2D_dfiaw")

[node name="Stun" type="Timer" parent="."]
wait_time = 3.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -66.0
offset_right = 151.0
offset_bottom = -39.0
max_value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.365
one_shot = true

[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
